# smol_singleton

./: CMakeLists.txt  README.md
include/: SingletonWrapper.h  singleton.h
source/: singleton_test.cpp
